--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 .gap {
     height: 100px;
 }
+
+/* Box animation */
+
 .headline {
     font-size: 3em;
     text-align: center;
@@ -15,24 +18,46 @@
 
 }
 
+.boxdiv {
+    margin: 0 auto;
+    height: 300px;
+    width: 300px;
+    background-color: #dfdcdc;
+    position: relative;
+}
 
 .box {
     width: 100px;
     height: 100px;
     background-color: #ff0000;
-    transform: box;
     margin: 100px;
+    animation-name: head;
+    position: absolute;
+    transition: 0.2s linear;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin: 0 auto;
+    left: 100px;
+
+    
 }
 
 
 
 .box:hover {
-    background-color: #0000ff;
+    background-color: #ffa600;
     transition: 2000ms ;
 }
 
 
 @keyframes head {
-    from { background-color: #ff0000;
-
+    0%   {background-color: red; top: 0px; left: 0px;}
+    25%  {background-color: yellow;  top: 0px; left: 200px; }
+    50%  {background-color: blue; top: 200px; left: 200px; }
+    75% {background-color: green; top:200px; left: 0px;}
+    100% {background-color: green; top: 0px; left: 0px;}
 }
+
+/* Circle animation */
