--- a/style.css
+++ b/style.css
@@ -61,3 +61,33 @@
 }
 
 /* Circle animation */
+
+.circlediv {
+    margin: 0 auto;
+    height: 50vh;
+    width: 90vw;
+    background-color: #dfdcdc;
+    position: relative;
+    overflow: hidden;
+}
+
+.circle {
+    width: 50px;
+    height: 50px;
+    background-color: #ff0000;
+    border-radius: 50%;
+    position: absolute;
+    animation: zigzag 6s infinite ease-in-out;
+}
+
+@keyframes zigzag {
+    0% { top: 0%; left: 0%; }
+    12.5% { top: calc(100% - 50px); left: 25%;  }
+    25% { top: 0%; left: 50%; }
+    37.5% { top: calc(100% - 50px); left: 75%; }
+    50% { top: 0%; left: calc(100% - 50px); }
+    62.5% { top: calc(100% - 50px); left: 75%; }
+    75% { top: 0%; left: 50%; }
+    87.5% { top: calc(100% - 50px); left: 25%; }
+    100% { top: 0%; left: 0%; }
+}
